Instant Address Standard/main/default/objects/FormatsDefault__c/FormatsDefault__c.object-meta.xml
<CustomObject>
    <label>Formats Default</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>FormatsDefault Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormatsDefault</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>