Instant Address Standard/main/default/objects/FormatsDefault__c/fields/BatchFormatId__c.field-meta.xml
<CustomField>
    <fullName>BatchFormatId__c</fullName>
    <label>BatchFormatId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>