Instant Address Standard/main/default/objects/FormatsDefault__c/fields/DatasetId__c.field-meta.xml
<CustomField>
    <fullName>DatasetId__c</fullName>
    <label>DatasetId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>