Instant Address Standard/main/default/objects/FormatsDefault__c/fields/RealtimeFormatId__c.field-meta.xml
<CustomField>
    <fullName>RealtimeFormatId__c</fullName>
    <label>RealtimeFormatId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>